--- a/Forum/Pages/Index.razor
+++ b/Forum/Pages/Index.razor
@@ -20,7 +20,7 @@
 				</div>
                 </div>
 			<div class="main row">
-				<button @onclick='() => NavMan.NavigateTo("/post")' class="btn-col-light btn-norm" style="margin: auto 0.5rem;">Start a Thread</button>
+				<button @onclick='() => NavMan.NavigateTo("/post")' class="btn-col-light btn-norm btn-hover-accent" style="margin: auto 0.5rem;">Start a Thread</button>
 			</div>
 			<div>
 				<a href="/pref">
