--- a/Forum/Pages/CreateThread.razor
+++ b/Forum/Pages/CreateThread.razor
@@ -59,7 +59,7 @@
 	{
 		await using var dbContext = DbContext.CreateDbContext();
 		
-		_forums = dbContext.Forums.ToArray();
+		_forums = dbContext.Forums.Where(f => !f.IsDeleted).ToArray();
 	}
 
 	/// <summary>
@@ -142,7 +142,7 @@
 	public class CreateThreadModel
 	{
 		[Required(ErrorMessage = "You need to select a forum.")]
-		public int ForumId { get; set; } = 1; // Setting it to 1 should make it impossible to _not_ have a element selected.
+		public int ForumId { get; set; } = 1; // Setting it to 1 should make it impossible to _not_ have an element selected.
 
 		[Required]
 		public string Title { get; set; }
