--- a/Forum/Pages/Admin.razor
+++ b/Forum/Pages/Admin.razor
@@ -128,6 +128,7 @@
         _fora = dbContext.Forums
             .Include(f => f.Members)
             .Include(f => f.Threads)
+            .Where(f => !f.IsDeleted)
 			.AsSplitQuery() // Divide multiple includes into multiple queries
             .ToList();
 
